--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </button>
     <aside class="sidebar">
       <div class="sidebar-header">
-        <img src="/logo.svg" class="logo" />
+        <img src="./logo.svg" class="logo" />
         <button class="close-btn">
           <i class="fas fa-times"></i>
         </button>
